local storage works

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -19,6 +19,7 @@
   "permissions": [
     "webRequest",
     "debugger",
+    "storage",
     "unlimitedStorage",
     "https://*/*",
     "http://*/*",
