all fields other than date created and author are working

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -47,6 +47,7 @@
         "bower_components/jquery/dist/jquery.min.js",
         "bower_components/lodash/lodash.min.js",
         "bower_components/angular/angular.min.js",
+        "bower_components/moment/min/moment.min.js",
         "scripts/contentscript.js"
       ],
       "html": ["./templates/overlay.html"],
