--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "dependencies": {
     "angular": "~1.4.3",
-    "lodash": "~3.10.1"
+    "lodash": "~3.10.1",
+    "moment": "~2.10.6"
   },
   "devDependencies": {
     "chai": "~3.2.0",
