--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,9 @@
   "dependencies": {
     "angular": "~1.4.3",
     "lodash": "~3.10.1",
-    "moment": "~2.10.6"
+    "moment": "~2.10.6",
+    "bootstrap": "~3.3.5",
+    "font-awesome": "~4.4.0"
   },
   "devDependencies": {
     "chai": "~3.2.0",
