--- a/app/manifest.json
+++ b/app/manifest.json
@@ -49,6 +49,7 @@
         "bower_components/lodash/lodash.min.js",
         "bower_components/angular/angular.min.js",
         "bower_components/moment/min/moment.min.js",
+        "bower_components/angular-sanitize/angular-sanitize.js",
         "scripts/contentscript.js",
         "bower_components/zeroclipboard/dist/zeroClipboard.min.js"
       ],
