--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
     "lodash": "~3.10.1",
     "moment": "~2.10.6",
     "bootstrap": "~3.3.5",
-    "font-awesome": "~4.4.0"
+    "font-awesome": "~4.4.0",
+    "angular-sanitize": "~1.4.3"
   },
   "devDependencies": {
     "chai": "~3.2.0",
